--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
-
+<% provide(:title, 'Home') %>
 
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Welcome</h1>
+        <p class="lead">This is Michael Marvick's home page.<br> It's not pretty yet. Something is to come.</p>
       </div>
 
     </div>
