Refactored, made navigation bar highlight page you are on, and added photo to front page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,7 @@
       <div class="starter-template">
         <h1>Welcome</h1>
         <p class="lead">This is Michael Marvick's home page.<br> It's not pretty yet. Something is to come.</p>
+        <img class="img-circle" src="https://s.gravatar.com/avatar/eafef357cb838708cb6217f90710425a?s=160" alt="Generic placeholder image">
       </div>
 
     </div>
