Made the developer projects listed from a database, added some contact info, and changed the home page message slightly

--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,6 +1,8 @@
 <% @navlinks = [{name: 'Home', url: root_url},
 				#{name: 'About', url: root_url},
-				{name: 'Contact', url: contact_url}] %>
+				{name: 'Developer', url: developer_url},
+				{name: 'Contact', url: contact_url}
+				] %>
 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
