--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,11 +1,35 @@
-@import "bootstrap";
-
 body {
-  padding-top: 50px;
+  padding-top: 70px;
   padding-left: 20px;
   padding-right: 20px;
 }
 .starter-template {
-  padding: 40px 15px;
-  text-align: center;
+	padding-top: 20px;
+ 	text-align: center;
+ 	//float:left
+}
+.contact-info {
+	margin-top: 20px;
+	//float:right;
+}
+
+.projects {
+	list-style-type: none;
+}
+
+.project {
+	overflow: hidden;
+	list-style-type: none;
+	.project-title {
+		font-weight: bold;
+	}
+	.project-body {
+		width: auto;
+	}
+	.project-thumb {
+		float: left;
+		margin-right: 20px;
+		border-style: solid;
+		border-width: 2px;	
+	}
 }
