--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,12 @@
 <% provide(:title, 'Contact') %>
 
 <h1>Contact</h1>
+<p>
+	Find me on <a href="http://www.github.com/mmarvick">GitHub</a> or <a href="http://www.linkedin.com/in/mmarvick">LinkedIn</a>.
+</p>
+<p>
+	Email me at <a href="mailto:mmarvick@gmail.com">mmarvick@gmail.com</a>.
+</p>
+<p>
+	I live in the <a href="https://www.google.com/maps/place/Portland,+OR/@39.7974686,-120.545047,4z">Portland, OR</a> area in the USA. If you have an interesting project and are in the area, let me know!
+</p>
