--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,23 @@
 <% provide(:title, 'Home') %>
 
     <div class="container">
+      <div class="col-sm-12">
+	      <div class="starter-template">
+	        <h1>Welcome</h1>
+	        <p class="lead">This is Michael Marvick's home page.<br> There's not much here yet. More will come soon.</p>
+	        <img class="img-circle" src="https://s.gravatar.com/avatar/eafef357cb838708cb6217f90710425a?s=160" alt="Generic placeholder image">
+	      </div>
+  	  </div>
 
-      <div class="starter-template">
-        <h1>Welcome</h1>
-        <p class="lead">This is Michael Marvick's home page.<br> It's not pretty yet. Something is to come.</p>
-        <img class="img-circle" src="https://s.gravatar.com/avatar/eafef357cb838708cb6217f90710425a?s=160" alt="Generic placeholder image">
-      </div>
+  	  <!--<div class="col-sm-4">
+	      <div class="panel panel-primary contact-info">
+	      	<div class="panel-heading">
+	      		<h3 class="panel-title">Contact</h3>
+	    	</div>
+	    	<div class="panel-body">
+	      		Email: mmarvick@gmail.com
+	    	</div>
+	       </div>
+	   </div>-->
 
     </div>
