Modifying image on project

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,7 +1,7 @@
 	<li >
 		<ul class="project well">
 			<li class="project-thumb">
-				<img src= <%= project.image_url %> alt= <%= project.title %> height="42" width="42">
+				<img src= <%= project.image_url %> alt= <%= project.title %> >
 			</li>	
 			<span class="project-body">
 				<li class="project-title">
