--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -31,5 +31,11 @@ body {
 		margin-right: 20px;
 		border-style: solid;
 		border-width: 2px;	
+		width: 144px;
+		height: 90px;
+		img {
+			max-width: 100%;
+			overflow: hidden;
+		}
 	}
 }
