--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
 
   <%= render 'shared/nav_bar', title: yield(:title) %>	
 
+  <% flash.each do |name, msg| %>
+  	<%= content_tag :div, msg, :id => "flash_#{name}" %>
+  <% end %>
+
   <%= yield %>
 
 </body>
