--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,7 +1,8 @@
 <% @navlinks = [{name: 'Home', url: root_url},
 				#{name: 'About', url: root_url},
 				{name: 'Developer', url: developer_url},
-				{name: 'Contact', url: contact_url}
+				{name: 'Contact', url: contact_url},
+        {name: 'Log Out', url: log_out_url, admin: true}
 				] %>
 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -18,7 +19,9 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
 		<% @navlinks.each do |link| %>
-			<li <%= raw (title == link[:name] ? 'class="active"' : '') %> > <%= link_to link[:name], link[:url] %> </li>
+      <% if not link[:admin] or current_user %>
+			 <li <%= raw (title == link[:name] ? 'class="active"' : '') %> > <%= link_to link[:name], link[:url] %> </li>
+      <% end %>
 		<% end %>     
       </ul>
     </div><!--/.nav-collapse -->
