updated home page text

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-12">
 	      <div class="starter-template">
 	        <h1>Welcome</h1>
-	        <p class="lead">This is Michael Marvick's home page.<br> There's not much here yet. More will come soon.</p>
+	        <p class="lead">This is Michael Marvick's home page. </p>
 	        <img class="img-circle" src="https://s.gravatar.com/avatar/eafef357cb838708cb6217f90710425a?s=160" alt="Generic placeholder image">
 	      </div>
   	  </div>
