Made projects editable

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -24,4 +24,8 @@
 				</li>
 			</span>
 		</ul>
+
+		<%= button_to "edit", edit_project_path(project), :method=> :get %>
+		<%= button_to "delete", project, :method=> :delete %>
+
 	</li>
