--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -14,6 +14,9 @@
 			<%= f.label :url %>
 			<%= f.text_field :url %>
 
+			<%= f.label :source %>
+			<%= f.text_field :source %>			
+
 			<%= f.label :image_url %>
 			<%= f.text_field :image_url %>
 
