Improved display of source link in project portfolio, and added an image for LifeWear to assets

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -22,6 +22,7 @@ body {
 .project {
 	overflow: hidden;
 	list-style-type: none;
+
 	.project-title {
 		font-weight: bold;
 	}
@@ -47,4 +48,8 @@ body {
 			//overflow: hidden;
 		}
 	}
+
+	.project-source {
+		margin-top: 20px;
+	} 
 }
