Removed border from project graphics

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -42,8 +42,8 @@ body {
 		width: 144px;
 		height: 90px;
 		img {
-			border-style: solid;
-			border-width: 2px;	
+			//border-style: solid;
+			//border-width: 2px;	
 			max-width: 100%;
 			//overflow: hidden;
 		}
