Center icons horizontally

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -46,6 +46,9 @@ body {
 			//border-width: 2px;	
 			max-width: 100%;
 			//overflow: hidden;
+			display: block;
+		    margin-left: auto;
+		    margin-right: auto;
 		}
 	}
 
