--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -13,6 +13,14 @@ body {
 	//float:right;
 }
 
+.link-image:hover {
+	text-decoration: none;
+}
+
+link-image:active {
+	text-decoration: none;
+}
+
 .projects {
 	list-style-type: none;
 }
