Add page for Urgent Call to be showcased

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -25,7 +25,11 @@ link-image:active {
 	list-style-type: none;
 }
 
-
+.uc {
+	.col-sm-4 {
+		//min-height:700px;
+	}
+}
 
 .project {
 	overflow: hidden;
