Disabling swipe for image gallery -- testing

--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -11,7 +11,8 @@
 				    GD.configure({
 				        height: 600,
 				        showImagenav: false,
-				        clicknext: true
+				        clicknext: true,
+				        swipe: 'disabled'
 				    })
 				</script>
 			</div>
