Reenabled swipe on mobile

--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -11,8 +11,7 @@
 				    GD.configure({
 				        height: 600,
 				        showImagenav: false,
-				        clicknext: true,
-				        swipe: 'disabled'
+				        clicknext: true
 				    })
 				</script>
 			</div>
