Remove title from urgent call page

--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -1,8 +1,5 @@
 <% provide(:title, 'Projects - Urgent Call') %>
 
-<h1>Urgent Call</h1>
-
-
 	<div class = "uc well">		
 		<div class = "uc row project-show">
 			<div class = "uc col-sm-4">
@@ -13,6 +10,7 @@
 				        showImagenav: false,
 				        clicknext: true
 				    })
+				    GD.run()
 				</script>
 			</div>
 
