Updated galleria to manage gallery myself. NOTE: Need to bring images to my site (still using stuff *hosted* with Galleria Display), AND need to refactor code (very redundant, but I need something up and running ASAP)

--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -1,9 +1,47 @@
 <% provide(:title, 'Projects - Urgent Call') %>
 
+	<style>
+		#galleria{height:600px;}
+		#galleria1{height:600px;}
+		#galleria2{height:600px;}
+		#galleria3{height:600px;}
+	</style>
+
 	<div class = "uc well">		
 		<div class = "uc row project-show">
 			<div class = "uc col-sm-4">
-				<script src="//neon.galleriadisplay.com/466c811b1ed664a77f04664421192643c2dd68f1/init.js"></script>
+				<div id="galleria">
+	                <img 
+	                    src="//neon.galleriadisplay.com/m/33/4f/82fa73e9327fff81a775be8e7d988132d044_506x900.jpg",
+	                    data-description="Quickly turn off all alerts or view the status of different alerts"
+	                >
+
+	                <img 
+	                    src="//neon.galleriadisplay.com/m/ec/6d/eee8ca21eb7a33ac76aa4595518c000e07e9_506x900.jpg",
+	                    data-description="Customize each alert with different parameters, including who can trigger it"
+	                >
+
+	                <img 
+	                    src="//neon.galleriadisplay.com/m/89/7f/ad3ac4015abc7ed3c4add6ea71aa62ae83c8_506x900.jpg",
+	                    data-description="Select who can trigger each alert"
+	                >
+
+	                <img 
+	                    src="//neon.galleriadisplay.com/m/cb/c9/1054068964db763086a3af1b982e6545e109_506x900.jpg",
+	                    data-description="Add or remove users from allow and block lists for each alert"
+	                >
+
+	                <img 
+	                    src="//neon.galleriadisplay.com/m/b2/b4/aceb58069ea30dac6ac4b797bbe0636ae546_506x900.jpg",
+	                    data-description="Description of the Single Call Alert when it's off"
+	                >
+
+	                <img 
+	                    src="//neon.galleriadisplay.com/m/ac/5b/0628a63f0ce2c8664517aeae0501940d5bfa_506x900.jpg",
+	                    data-description="Snooze all alerts temporarily"
+	                >
+		        </div>
+
 			</div>
 
 			<div class = "uc col-sm-8 project-info">
@@ -63,56 +101,103 @@
 
 <div class = "uc well">		
 		<div class = "uc row project-old">
-			<% @commits = [
-        		{
-        			source_url: 'https://github.com/mmarvick/phone-alert-app/tree/a58d241a0c086739d2034d997102f086ce0fe6e2',
-        			apk_url: 'https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/01_UrgentCall_a58d241a0c086739d2034d997102f086ce0fe6e2.apk',
-        			galleria_number: '8e3453e1633befd5dad9e660feaba546e890f258'
-        			},
-        		
-        		{
-        			source_url: 'https://github.com/mmarvick/phone-alert-app/tree/c892466d25671680ca882495df7642582f5fd00e',
-        			apk_url:  'https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/02_UrgentCallPro_c892466d25671680ca882495df7642582f5fd00e.apk',
-        			galleria_number: '8a82e84dbb38036e0dd856022bfdea2b30e8fc5b'
-        			},
 
-        		{
-        			source_url: 'https://github.com/mmarvick/phone-alert-app/tree/000957cf23c8e2a643cc5cf4160c32e31358513a',
-        			apk_url: 'https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/03_UrgentCallPro_000957cf23c8e2a643cc5cf4160c32e31358513a.apk',
-        			galleria_number: '89c3deac7272f5c8bb327c0aa438361102a9b89f'
-        		}
-				] %>
+			<div class = "uc col-sm-4 old-project-show">
+				<div id="galleria1">
 
-			<% @commits.each do |commit| %>
+		            <img src="//neon.galleriadisplay.com/m/d9/53/7c0e87d3a71f97f7781b551782e5cc87ed61_506x900.jpg" >
 
-				<div class = "uc col-sm-<%= 12 / @commits.length %> old-project-show">
-					<script src="//neon.galleriadisplay.com/<%= commit[:galleria_number] %>/init.js"></script>
-					<ul class="simplelist">
+					<img src="//neon.galleriadisplay.com/m/fb/b3/3123d963baca29c86bab82f10124b6e0c5ca_506x900.jpg" >		            
 
-						<li>
-							<a href="<%= commit[:source_url] %>">
-								View source code
-							</a>
-						</li>
-						<li>
-							<a href="<%= commit[:apk_url] %>">
-							Download package file
-							</a>
-						</li>
+					<img src="//neon.galleriadisplay.com/m/15/ee/9726a0563fcb7ec239ab43ce78f02e0d262a_506x900.jpg" >
 
-				</ul>
-				</div>
-			
-			<% end %>	
-							
+
+
+		        </div>
+
+				<ul class="simplelist">
+
+					<li>
+						<a href="https://github.com/mmarvick/phone-alert-app/tree/a58d241a0c086739d2034d997102f086ce0fe6e2">
+							View source code
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/01_UrgentCall_a58d241a0c086739d2034d997102f086ce0fe6e2.apk">
+						Download package file
+						</a>
+					</li>
+
+			</ul>
+			</div>
+	
+			<div class = "uc col-sm-4 old-project-show">
+				<div id="galleria2">
+
+		            <img src="//neon.galleriadisplay.com/m/7b/32/a14c49df2c9f168f7d67d4f1cde56b7f4674_506x900.jpg" >
+
+					<img src="//neon.galleriadisplay.com/m/77/77/61496b743694bcbc06f0bd5fc39168c9dc7e_506x900.jpg" >
+
+					<img src="//neon.galleriadisplay.com/m/91/1d/5a2eea240776be60c722e2226c5faf885f27_506x900.jpg" >
+					
+		        </div>
+
+				<ul class="simplelist">
+
+					<li>
+						<a href="https://github.com/mmarvick/phone-alert-app/tree/c892466d25671680ca882495df7642582f5fd00e">
+							View source code
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/02_UrgentCallPro_c892466d25671680ca882495df7642582f5fd00e.apk">
+						Download package file
+						</a>
+					</li>
+
+			</ul>
+			</div>
+
+			<div class = "uc col-sm-4 old-project-show">
+				<div id="galleria3">
+
+		            <img src="//neon.galleriadisplay.com/m/4f/d8/4dfa219033f7c2c46ae8430439df2650790b_506x900.jpg" >
+
+					<img src="//neon.galleriadisplay.com/m/18/bd/f7cde9cca55c4445d259aa56efb4180f597c_506x900.jpg" >
+
+					<img src="//neon.galleriadisplay.com/m/86/6d/0ddacaee7b6eb2079fd7f78e471a3550ad72_506x900.jpg" >
+
+					<img src="//neon.galleriadisplay.com/m/2e/39/6767a8a22606b126a6f9bd0a1f8fbb70c6af_506x900.jpg" >
+					
+		        </div>
+
+				<ul class="simplelist">
+
+					<li>
+						<a href="https://github.com/mmarvick/phone-alert-app/tree/000957cf23c8e2a643cc5cf4160c32e31358513a">
+							View source code
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/03_UrgentCallPro_000957cf23c8e2a643cc5cf4160c32e31358513a.apk">
+						Download package file
+						</a>
+					</li>
+
+			</ul>
+			</div>			
+
 		</div>
 	</div>
 
+
 	<script>
-    GD.configure({
-        height: 600,
-        showImagenav: false,
-        clicknext: true
-    })
-    GD.run()
+		Galleria.loadTheme('/assets/galleria/themes/classic/galleria.classic.min.js');
+		Galleria.configure({
+			thumbnails: "numbers"
+		});
+		Galleria.run('#galleria');
+		Galleria.run('#galleria1');
+		Galleria.run('#galleria2');
+		Galleria.run('#galleria3');
 	</script>
