--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag 'galleria/galleria-1.3.5.min.js' %>
+    <%= javascript_include_tag 'galleria/themes/classic/galleria.classic.min.js' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
