--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -192,7 +192,7 @@
 
 
 	<script>
-		Galleria.loadTheme('/assets/galleria/themes/classic/galleria.classic.min.js');
+		Galleria.loadTheme('<%= javascript_path "galleria/themes/classic/galleria.classic.min.js" %>');
 		Galleria.configure({
 			thumbnails: "numbers"
 		});
