Fixing validation issues

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -75,6 +75,10 @@ link-image:active {
 		
 	}
 
+	.project-body-list {
+		list-style-type: none;
+	}
+
 	a, a:visited, a:active {
 		.project-thumb {
 			color: #000;
