--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -12,32 +12,32 @@
 			<div class = "uc col-sm-4">
 				<div id="galleria">
 	                <img 
-	                    src="//neon.galleriadisplay.com/m/33/4f/82fa73e9327fff81a775be8e7d988132d044_506x900.jpg",
+	                    src="//neon.galleriadisplay.com/m/33/4f/82fa73e9327fff81a775be8e7d988132d044_506x900.jpg"
 	                    data-description="Quickly turn off all alerts or view the status of different alerts"
 	                >
 
 	                <img 
-	                    src="//neon.galleriadisplay.com/m/ec/6d/eee8ca21eb7a33ac76aa4595518c000e07e9_506x900.jpg",
+	                    src="//neon.galleriadisplay.com/m/ec/6d/eee8ca21eb7a33ac76aa4595518c000e07e9_506x900.jpg"
 	                    data-description="Customize each alert with different parameters, including who can trigger it"
 	                >
 
 	                <img 
-	                    src="//neon.galleriadisplay.com/m/89/7f/ad3ac4015abc7ed3c4add6ea71aa62ae83c8_506x900.jpg",
+	                    src="//neon.galleriadisplay.com/m/89/7f/ad3ac4015abc7ed3c4add6ea71aa62ae83c8_506x900.jpg"
 	                    data-description="Select who can trigger each alert"
 	                >
 
 	                <img 
-	                    src="//neon.galleriadisplay.com/m/cb/c9/1054068964db763086a3af1b982e6545e109_506x900.jpg",
+	                    src="//neon.galleriadisplay.com/m/cb/c9/1054068964db763086a3af1b982e6545e109_506x900.jpg"
 	                    data-description="Add or remove users from allow and block lists for each alert"
 	                >
 
 	                <img 
-	                    src="//neon.galleriadisplay.com/m/b2/b4/aceb58069ea30dac6ac4b797bbe0636ae546_506x900.jpg",
+	                    src="//neon.galleriadisplay.com/m/b2/b4/aceb58069ea30dac6ac4b797bbe0636ae546_506x900.jpg"
 	                    data-description="Description of the Single Call Alert when it's off"
 	                >
 
 	                <img 
-	                    src="//neon.galleriadisplay.com/m/ac/5b/0628a63f0ce2c8664517aeae0501940d5bfa_506x900.jpg",
+	                    src="//neon.galleriadisplay.com/m/ac/5b/0628a63f0ce2c8664517aeae0501940d5bfa_506x900.jpg"
 	                    data-description="Snooze all alerts temporarily"
 	                >
 		        </div>
