Fixing validation issues

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -57,8 +57,10 @@ link-image:active {
 
 }
 
-
-
+#galleria{height:600px;}
+#galleria1{height:600px;}
+#galleria2{height:600px;}
+#galleria3{height:600px;}
 
 .project {
 	overflow: hidden;
