--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -1,6 +1,9 @@
 <% provide(:title, 'Projects - Urgent Call') %>
 
-	<div class = "uc well">		
+	<div class = "uc well section">
+		<!-- <p class = "uc section-title">
+			Urgent Call
+		</p> -->
 		<div class = "uc row project-show">
 			<div class = "uc col-sm-4">
 				<div id="galleria">
@@ -49,7 +52,7 @@
 						Urgent Call gives users peace of mind, allowing them to silence their phone and still receive alerts when they're needed most.
 					</h3>
 					<p>
-						Alerts are triggerable:
+						Alerts are triggerable by:
 					</p>
 					<ul>
 
@@ -63,14 +66,14 @@
 					</p>
 					<ul>
 
-						<li>Careful evaluation of tradeoffs between form and function to keep the interface clean and simple, yet filled with customizability appropriate to satisfy most users</li>
-						<li>Continuous design reviews to make the interface simpler and more intuitive based on observation and feedback from users, and study of the Android Design documentation</li>
-						<li>Storing preferences in lists and databases as appropriate, and storing in a way that is accessible and portable as features are added</li>					
+						<li>Careful evaluation of tradeoffs between form and function to keep the interface clean and simple, yet filled with enough customization to satisfy most users</li>
+						<li>Continuous design reviews to make the interface simpler and more intuitive based on personal intuition, observation and feedback from users, and study of the Android Design documentation</li>
+						<li>Storing preferences in lists and databases as appropriate, and storing in a way that is accessible and easily to upgrade as features are added</li>					
 						<li>Continuous and frequent code refactorization to keep the codebase managable and maintainable</li>	
 					</ul>
 
 					<p>
-						Keeping a clean and simple interface was a critical concern for this project, especially since most users will probably rarely change the settings after the first time. Screenshots and links to package files for older iterations are included below.
+						Keeping a clean and simple interface was a critical concern for this project, especially since most users will probably rarely change the settings after the first time. Screenshots showing this development and links to package files for older iterations are included below.
 					</p>
 				</div>
 
@@ -98,10 +101,18 @@
 	</div>
 
 
-<div class = "uc well">		
+	<div class = "uc well">		
+		<p class = "uc section-title">
+			Previous Designs
+		</p>
 		<div class = "uc row project-old">
 
 			<div class = "uc col-sm-4 old-project-show">
+
+				<p class = "uc old-project-title">
+					Commit #33
+				</p>
+
 				<div id="galleria1">
 
 		            <img
@@ -140,6 +151,11 @@
 			</div>
 	
 			<div class = "uc col-sm-4 old-project-show">
+
+				<p class = "uc old-project-title">
+					Commit #57
+				</p>	
+
 				<div id="galleria2">
 
 		            <img
@@ -176,6 +192,11 @@
 			</div>
 
 			<div class = "uc col-sm-4 old-project-show">
+
+				<p class = "uc old-project-title">
+					Commit #94
+				</p>
+
 				<div id="galleria3">
 
 		            <img
