Improved UC page

--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -58,7 +58,7 @@
 
 						<li>Text messages contaning a customizable key word</li>
 						<li>Multiple repeat calls in succession</li>
-						<li>A single call from a preselected important caller</li>
+						<li>A single call from an important caller</li>
 
 					</ul>
 					<p>
@@ -66,14 +66,15 @@
 					</p>
 					<ul>
 
-						<li>Careful evaluation of tradeoffs between form and function to keep the interface clean and simple, yet filled with enough customization to satisfy most users</li>
-						<li>Continuous design reviews to make the interface simpler and more intuitive based on personal intuition, observation and feedback from users, and study of the Android Design documentation</li>
-						<li>Storing preferences in lists and databases as appropriate, and storing in a way that is accessible and easily to upgrade as features are added</li>					
-						<li>Continuous and frequent code refactorization to keep the codebase managable and maintainable</li>	
+						<li>Careful evaluation of tradeoffs between form and function to keep the user interface clean and simple, yet filled with enough customization to satisfy most users</li>
+						<li>Continuous design review to make the interface simpler and more intuitive based on personal intuition, observation and feedback from users, and study of the Android Design documentation</li>
+						<li>Storing preferences in lists and databases as appropriate, and storing in a way that is accessible and easily to upgrade as features are added</li>	
+						<li>Using helper functions to access preference data, making code more maintainable as data structures change</li>
+						<li>Frequent code refactorization to keep the codebase managable and maintainable</li>	
 					</ul>
 
 					<p>
-						Keeping a clean and simple interface was a critical concern for this project, especially since most users will probably rarely change the settings after the first time. Screenshots showing this development and links to package files for older iterations are included below.
+						Keeping a clean and simple interface was a critical concern for this project, especially since most users will rarely change the alert settings after the first time. To demo some of this progress, screenshots and package files of older iterations are included below.
 					</p>
 				</div>
 
