--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -68,7 +68,7 @@
 
 						<li>Careful evaluation of tradeoffs between form and function to keep the user interface clean and simple, yet filled with enough customization to satisfy most users</li>
 						<li>Continuous design review to make the interface simpler and more intuitive based on personal intuition, observation and feedback from users, and study of the Android Design documentation</li>
-						<li>Storing preferences in lists and databases as appropriate, and storing in a way that is accessible and easily to upgrade as features are added</li>	
+						<li>Storing preferences in lists and databases as appropriate, and storing in a way that is accessible and easy to upgrade as features are added</li>	
 						<li>Using helper functions to access preference data, making code more maintainable as data structures change</li>
 						<li>Frequent code refactorization to keep the codebase managable and maintainable</li>	
 					</ul>
