Made home page the portfolio

--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,6 +1,6 @@
-<% @navlinks = [{name: 'Home', url: root_url},
+<% @navlinks = [ #{name: 'Home', url: root_url},
 				#{name: 'About', url: root_url},
-				{name: 'Developer', url: developer_url},
+				{name: 'Portfolio', url: root_url},
 				{name: 'Contact', url: contact_url},
         {name: 'Log Out', url: log_out_url, admin: true}
 				] %>
