--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<%= provide(:title, "Developer") %>
+<%= provide(:title, "Portfolio") %>
 <h1>Developer</h1>
 Find me on <a href="http://www.github.com/mmarvick">GitHub</a> or <a href="http://www.linkedin.com/in/mmarvick">LinkedIn</a>.
 
