Updated heading for portfolio

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,5 @@
 <%= provide(:title, "Portfolio") %>
-<h1>Developer</h1>
-Find me on <a href="http://www.github.com/mmarvick">GitHub</a> or <a href="http://www.linkedin.com/in/mmarvick">LinkedIn</a>.
+<h1>Portfolio</h1>
 
 <% @platforms.each do |platform| %>
 <h3><%= platform %></h3>
